--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -103,35 +103,7 @@
   .services-item .read-btn {
     margin-top: 8px;
   }
-  .pl-0, .px-0 {
-    padding-left: 15px !important;
-  }
-  .app-content {
-    max-width: 100%;
-    margin-top: 30px;
-  }
-  .app-content h3 {
-    font-size: 25px;
-    max-width: 100%;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  .app-content .app-text p {
-    font-size: 14px;
-  }
-  .solutions-content h3 {
-    font-size: 25px;
-    margin-top: 8px;
-    margin-bottom: 7px;
-  }
-  .solutions-content .solutions-features li span {
-    font-size: 15px;
-    width: 100%;
-  }
-  .solutions-image {
-    margin-top: 30px;
-    top: 0;
-  }
+  
   .doctor-item .content {
     bottom: 0;
   }
@@ -148,22 +120,7 @@
     font-size: 20px;
     margin-top: 6px;
   }
-  .consult-content {
-    margin-top: 30px;
-  }
-  .consult-content h3 {
-    font-size: 25px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  .pl-5, .px-5 {
-    padding-left: 0 !important;
-  }
-  .main-banner.bg-two {
-    height: 100%;
-    padding-top: 120px;
-    padding-bottom: 50px;
-  }
+  
   .services-item-two h3 {
     font-size: 20px;
   }
@@ -201,156 +158,6 @@
     position: relative;
     bottom: 0;
   }
-  .partner-list .partner-item {
-    flex: unset;
-    max-width: unset;
-    display: inline-block;
-    width: 100%;
-  }
-  .partner-list .partner-item:nth-child(6) {
-    margin-left: 0;
-  }
-  .main-banner.bg-three {
-    height: 100%;
-    padding-top: 120px;
-    padding-bottom: 60px;
-  }
-  .video-image {
-    margin-top: 30px;
-  }
-  .video-image img {
-    max-width: 100%;
-  }
-  .emergency-area {
-    margin-top: 0;
-  }
-  .emergency-form {
-    padding: 40px 25px;
-  }
-  .emergency-form .content h3 {
-    font-size: 18px;
-  }
-  .emergency-form .content i {
-    font-size: 20px;
-  }
-  .treatment-content h3 {
-    font-size: 25px;
-  }
-  .treatment-content .treatment-features li span {
-    font-size: 14px;
-  }
-  .choose-content h3 {
-    font-size: 25px;
-  }
-  .choose-overview-content {
-    padding: 20px;
-  }
-  .choose-image {
-    position: relative;
-    top: 0;
-  }
-  .choose-area {
-    padding-bottom: 0;
-  }
-  .main-banner.bg-four {
-    height: 100%;
-    padding-top: 185px;
-    padding-bottom: 0;
-  }
-  .main-banner.bg-four .banner-form {
-    background-color: #fff;
-  }
-  .main-banner.bg-four .container-fluid {
-    padding-right: 15px;
-  }
-  .main-banner.bg-four .main-banner-content {
-    max-width: 100%;
-  }
-  .main-banner.bg-four .main-banner-content h1 {
-    font-size: 26px;
-  }
-  .emergency-area.two {
-    padding-top: 50px;
-  }
-  .image-sliders {
-    margin-top: 30px;
-  }
-  .emergency-form.two {
-    padding: 30px 20px;
-  }
-  .services-item-three h3 {
-    font-size: 20px;
-  }
-  .services-item-three p {
-    font-size: 15px;
-  }
-  .step-one-image {
-    margin-bottom: 30px;
-  }
-  .step-one-content h3 {
-    font-size: 25px;
-    margin-top: 8px;
-    margin-bottom: 10px;
-  }
-  .step-one-content p {
-    font-size: 15px;
-  }
-  .step-one-content b {
-    font-size: 16px;
-    color: #7b7c93;
-    font-weight: 500;
-  }
-  .step-two-content {
-    margin-bottom: 30px;
-  }
-  .step-two-content h3 {
-    font-size: 25px;
-    margin-top: 8px;
-    margin-bottom: 10px;
-  }
-  .step-two-content p {
-    font-size: 15px;
-  }
-  .step-two-content b {
-    font-size: 16px;
-    color: #7b7c93;
-    font-weight: 500;
-  }
-  .step-three-image {
-    margin-bottom: 30px;
-  }
-  .step-three-content h3 {
-    font-size: 25px;
-    margin-top: 8px;
-    margin-bottom: 10px;
-  }
-  .step-three-content p {
-    font-size: 15px;
-  }
-  .step-three-content b {
-    font-size: 16px;
-    color: #7b7c93;
-    font-weight: 500;
-  }
-  .step-four-content {
-    margin-bottom: 30px;
-  }
-  .step-four-content h3 {
-    font-size: 25px;
-    margin-top: 8px;
-    margin-bottom: 10px;
-  }
-  .step-four-content p {
-    font-size: 15px;
-  }
-  .step-four-content b {
-    font-size: 16px;
-    color: #7b7c93;
-    font-weight: 500;
-  }
-  .clients-area.bg-ffffff .clients-item {
-    background-color: #e3f2fc;
-  }
   .page-title-area {
     height: 230px;
   }
@@ -374,40 +181,6 @@
   .widget-projects-area {
     margin-top: 30px;
   }
-  .solution-details-overview {
-    margin-top: 30px;
-  }
-  .solution-details-overview .image img {
-    margin-bottom: 10px;
-  }
-  .solution-details-overview .text {
-    margin-top: 20px;
-  }
-  .solution-details-overview .solution-details-video .video-btn {
-    width: 60px;
-    height: 60px;
-    line-height: 70px;
-  }
-  .solution-details-sidebar {
-    margin-top: 30px;
-  }
-  .woocommerce-result-count {
-    margin-bottom: 20px;
-  }
-  .cart-table table thead tr th {
-    padding: 0 40px 15px;
-  }
-  .text-end {
-    text-align: center !important;
-    margin-top: 20px;
-  }
-  .cart-totals {
-    padding: 20px;
-    text-align: center;
-  }
-  .cart-totals ul {
-    text-align: left;
-  }
   .pagination-area .page-numbers {
     width: 35px;
     height: 40px;
@@ -417,45 +190,13 @@
   .order-details {
     margin-top: 30px;
   }
-  .product-details-desc h3 {
+  .doctor-details-desc h3 {
     margin-top: 25px;
-  }
-  .product-details-desc .product-add-to-cart .default-btn {
-    margin-top: 20px;
-  }
-  .product-details-desc .custom-payment-options .payment-methods a img {
-    width: 38px;
-  }
-  .products-details-tab {
-    margin-top: 30px;
-  }
-  .products-details-tab .tab_content {
-    padding: 8px;
-  }
-  .products-details-tab .tab_content .tabs_item .products-details-tab-content .additional-information li span {
-    width: 45%;
-  }
-  .products-details-tab .tab_content .tabs_item .products-details-tab-content .product-review-form .review-title .default-btn {
-    display: none;
-  }
-  .products-details-tab .tab_content .tabs_item .products-details-tab-content .product-review-form .review-comments .review-item {
-    padding-right: 0;
-  }
-  .products-details-tab .tab_content .tabs_item .products-details-tab-content .product-review-form .review-comments .review-item .review-report-link {
-    position: relative;
-    top: 4px;
-  }
-  .related-products {
-    margin-top: 50px;
   }
   .single-privacy h3 {
     font-size: 22px;
   }
-  .privacy-image .video-btn {
-    width: 60px;
-    height: 60px;
-    line-height: 70px;
-  }
+
   .contact-area .section-title {
     margin-top: 20px;
   }
@@ -503,38 +244,6 @@
     margin-top: 0;
     padding: 30px 30px;
   }
-  .main-banner-item {
-    height: 100%;
-    padding-top: 70px;
-    padding-bottom: 60px;
-  }
-  .main-banner-item .main-banner-content {
-    text-align: center;
-    max-width: 100%;
-  }
-  .main-banner-item .main-banner-content h1 {
-    font-size: 26px;
-  }
-  .main-banner-item .main-banner-content p {
-    font-size: 15px;
-  }
-  .main-banner-item .main-banner-content .banner-btn {
-    margin-top: 20px;
-  }
-  .about-image .video-btn {
-    width: 65px;
-    height: 60px;
-    line-height: 65px;
-  }
-  .about-image .video-btn i {
-    font-size: 20px;
-  }
-  .single-counter h3 {
-    font-size: 30px;
-  }
-  .single-counter h3 .sign-icon {
-    font-size: 30px;
-  }
   .single-services h3 {
     font-size: 20px;
   }
@@ -546,43 +255,12 @@
     margin-bottom: 30px;
     margin-top: 30px;
   }
-  .faq-image .video-btn {
-    width: 65px;
-    height: 60px;
-    line-height: 65px;
-  }
-  .faq-image .video-btn i {
-    font-size: 20px;
-  }
-  .projects-item-two .content h3 {
-    font-size: 20px;
-  }
+  
   .services-image {
     height: 500px;
     margin-bottom: 30px;
   }
-  .main-banner-single {
-    height: 100%;
-    padding-top: 70px;
-  }
-  .main-banner-single .main-banner-content {
-    text-align: center;
-  }
-  .main-banner-single .main-banner-content h1 {
-    font-size: 26px;
-  }
-  .main-banner-single .main-banner-content p {
-    font-size: 15px;
-  }
-  .main-banner-single .main-banner-content .banner-btn {
-    margin-top: 20px;
-  }
-  .main-banner-single .main-banner-image {
-    margin-top: 30px;
-  }
-  .about-wrap {
-    height: 450px;
-  }
+ 
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .pb-70 {
@@ -689,32 +367,7 @@
   .pl-0, .px-0 {
     padding-left: 15px !important;
   }
-  .app-content {
-    max-width: 100%;
-    margin-top: 30px;
-  }
-  .app-content h3 {
-    font-size: 25px;
-    max-width: 100%;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  .app-content .app-text p {
-    font-size: 14px;
-  }
-  .solutions-content h3 {
-    font-size: 25px;
-    margin-top: 8px;
-    margin-bottom: 7px;
-  }
-  .solutions-content .solutions-features li span {
-    width: 100%;
-  }
-  .solutions-image {
-    margin-top: 30px;
-    text-align: center;
-    top: 0;
-  }
+  
   .doctor-item .content {
     bottom: 0;
   }
@@ -731,22 +384,7 @@
     font-size: 20px;
     margin-top: 6px;
   }
-  .consult-content {
-    margin-top: 30px;
-  }
-  .consult-content h3 {
-    font-size: 25px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  .pl-5, .px-5 {
-    padding-left: 0 !important;
-  }
-  .main-banner.bg-two {
-    height: 100%;
-    padding-top: 170px;
-    padding-bottom: 100px;
-  }
+  
   .services-item-two h3 {
     font-size: 20px;
   }
@@ -784,170 +422,11 @@
     position: relative;
     bottom: 0;
   }
-  .projects-item .content p {
-    font-size: 15px;
-  }
-  .partner-list {
-    text-align: center;
-    display: inline-block;
-  }
-  .partner-list .partner-item {
-    flex: 0 0 45%;
-    max-width: 40%;
-    display: inline-block;
-    width: 100%;
-  }
-  .partner-list .partner-item:nth-child(6) {
-    margin-left: 0;
-  }
+  
   .main-banner.bg-three {
     height: 100%;
     padding-top: 150px;
     padding-bottom: 80px;
-  }
-  .video-image {
-    margin-top: 30px;
-  }
-  .video-image img {
-    max-width: 100%;
-  }
-  .emergency-area {
-    margin-top: 0;
-  }
-  .emergency-form {
-    padding: 40px 25px;
-  }
-  .emergency-form .content h3 {
-    font-size: 18px;
-  }
-  .emergency-form .content i {
-    font-size: 20px;
-  }
-  .treatment-content h3 {
-    font-size: 25px;
-  }
-  .treatment-content .treatment-features li span {
-    font-size: 14px;
-  }
-  .choose-content h3 {
-    font-size: 25px;
-  }
-  .choose-overview-content {
-    padding: 20px;
-  }
-  .choose-image {
-    position: relative;
-    top: 0;
-  }
-  .choose-area {
-    padding-bottom: 0;
-  }
-  .main-banner.bg-four {
-    height: 100%;
-    padding-top: 185px;
-    padding-bottom: 0;
-  }
-  .main-banner.bg-four .banner-form {
-    background-color: #fff;
-  }
-  .main-banner.bg-four .container-fluid {
-    padding-right: 15px;
-  }
-  .main-banner.bg-four .main-banner-content {
-    max-width: 100%;
-  }
-  .main-banner.bg-four .main-banner-content h1 {
-    font-size: 26px;
-  }
-  .emergency-area.two {
-    padding-top: 50px;
-  }
-  .image-sliders {
-    margin-top: 30px;
-  }
-  .emergency-form.two {
-    padding: 30px 20px;
-  }
-  .services-item-three h3 {
-    font-size: 20px;
-  }
-  .services-item-three p {
-    font-size: 15px;
-  }
-  .step-one-image {
-    margin-bottom: 30px;
-    text-align: center;
-  }
-  .step-one-content h3 {
-    font-size: 25px;
-    margin-top: 8px;
-    margin-bottom: 10px;
-  }
-  .step-one-content p {
-    font-size: 15px;
-  }
-  .step-one-content b {
-    font-size: 16px;
-    color: #7b7c93;
-    font-weight: 500;
-  }
-  .step-two-content {
-    margin-bottom: 30px;
-  }
-  .step-two-content h3 {
-    font-size: 25px;
-    margin-top: 8px;
-    margin-bottom: 10px;
-  }
-  .step-two-content p {
-    font-size: 15px;
-  }
-  .step-two-content b {
-    font-size: 16px;
-    color: #7b7c93;
-    font-weight: 500;
-  }
-  .step-two-image {
-    text-align: center;
-  }
-  .step-three-image {
-    margin-bottom: 30px;
-    text-align: center;
-  }
-  .step-three-content h3 {
-    font-size: 25px;
-    margin-top: 8px;
-    margin-bottom: 10px;
-  }
-  .step-three-content p {
-    font-size: 15px;
-  }
-  .step-three-content b {
-    font-size: 16px;
-    color: #7b7c93;
-    font-weight: 500;
-  }
-  .step-four-content {
-    margin-bottom: 30px;
-  }
-  .step-four-content h3 {
-    font-size: 25px;
-    margin-top: 8px;
-    margin-bottom: 10px;
-  }
-  .step-four-content p {
-    font-size: 15px;
-  }
-  .step-four-content b {
-    font-size: 16px;
-    color: #7b7c93;
-    font-weight: 500;
-  }
-  .step-four-image {
-    text-align: center;
-  }
-  .clients-area.bg-ffffff .clients-item {
-    background-color: #e3f2fc;
   }
   .service-details-content .service-details-info .single-info-box {
     flex: unset;
@@ -957,34 +436,8 @@
   .widget-projects-area {
     margin-top: 30px;
   }
-  .solution-details-overview {
-    margin-top: 30px;
-  }
-  .solution-details-overview .image {
-    text-align: center;
-  }
-  .solution-details-overview .image img {
-    margin-bottom: 10px;
-    width: 100%;
-  }
-  .solution-details-overview .text {
-    margin-top: 20px;
-  }
-  .solution-details-overview .solution-details-video .video-btn {
-    width: 60px;
-    height: 60px;
-    line-height: 70px;
-  }
-  .solution-details-sidebar {
-    margin-top: 30px;
-  }
-  .solution-details-sidebar .details-image {
-    text-align: center;
-  }
-  .order-details {
-    margin-top: 30px;
-  }
-  .product-details-desc h3 {
+  
+  .doctor-details-desc h3 {
     margin-top: 25px;
   }
   .contact-area .section-title {
@@ -1033,9 +486,6 @@
   .widget-area .widget-image {
     text-align: center;
   }
-  .emergency-item .content p {
-    line-height: 1;
-  }
   .appointment-area .single-fun-fact {
     margin-top: 0;
   }
@@ -1057,20 +507,6 @@
   .main-banner-item .main-banner-content .banner-btn {
     margin-top: 20px;
   }
-  .about-image .video-btn {
-    width: 65px;
-    height: 60px;
-    line-height: 65px;
-  }
-  .about-image .video-btn i {
-    font-size: 20px;
-  }
-  .single-counter h3 {
-    font-size: 30px;
-  }
-  .single-counter h3 .sign-icon {
-    font-size: 30px;
-  }
   .single-services h3 {
     font-size: 20px;
   }
@@ -1082,43 +518,12 @@
     margin-bottom: 30px;
     margin-top: 30px;
   }
-  .faq-image .video-btn {
-    width: 65px;
-    height: 60px;
-    line-height: 65px;
-  }
-  .faq-image .video-btn i {
-    font-size: 20px;
-  }
-  .projects-item-two .content h3 {
-    font-size: 20px;
-  }
+ 
   .services-image {
     height: 500px;
     margin-bottom: 30px;
   }
-  .main-banner-single {
-    height: 100%;
-    padding-top: 100px;
-  }
-  .main-banner-single .main-banner-content {
-    text-align: center;
-  }
-  .main-banner-single .main-banner-content h1 {
-    font-size: 36px;
-  }
-  .main-banner-single .main-banner-content p {
-    font-size: 15px;
-  }
-  .main-banner-single .main-banner-content .banner-btn {
-    margin-top: 20px;
-  }
-  .main-banner-single .main-banner-image {
-    margin-top: 30px;
-  }
-  .about-wrap {
-    height: 450px;
-  }
+  
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .top-header .top-list li {
@@ -1159,9 +564,7 @@
     font-size: 20px;
     margin-bottom: 10px;
   }
-  .app-content h3 {
-    max-width: 100%;
-  }
+  
   .single-fun-fact {
     padding: 50px 16px;
   }
@@ -1183,12 +586,7 @@
   .services-item-two h3 {
     font-size: 20px;
   }
-  .projects-item .content {
-    padding: 12px;
-  }
-  .projects-item .content p {
-    font-size: 14px;
-  }
+  
   .testimonials-slider .testimonials-item .content h3 {
     font-size: 28px;
     margin-top: 5px;
@@ -1197,44 +595,13 @@
   .testimonials-slider .testimonials-item .content p {
     font-size: 16px;
   }
-  .emergency-form {
-    padding: 35px 30px;
-  }
-  .main-banner.bg-three {
-    padding-top: 100px;
-  }
-  .emergency-area {
-    margin-top: -120px;
-  }
-  .choose-image {
-    right: 18px;
-  }
-  .main-banner.bg-four {
-    height: 100%;
-    padding-top: 155px;
-    padding-bottom: 210px;
-  }
-  .main-banner.bg-four .main-banner-content h1 {
-    font-size: 35px;
-  }
-  .emergency-form.two {
-    padding: 40px 40px;
-  }
   .service-details-content .service-details-info {
     padding: 38px 0px 18px;
   }
   .single-blog-details .details-features li {
     font-size: 16px;
   }
-  .single-counter h3 {
-    font-size: 30px;
-  }
-  .projects-item-two .content h3 {
-    font-size: 20px;
-  }
-  .main-banner-single .main-banner-image {
-    margin-top: 176px;
-  }
+  
   .about-content .about-features li {
     padding-left: 5px;
     padding-right: 5px;
@@ -1250,9 +617,5 @@
   }
   .main-banner-content {
     margin-top: 0;
-  }
-  .projects-item .content p a {
-    font-size: 15px;
-    font-weight: 500;
   }
 }
